--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -65,121 +65,96 @@ jobs:
             echo "GRADLE_CMD=gradle" >> "$GITHUB_OUTPUT"
           fi
 
-      - name: Write settings gradle kts with pluginManagement and repos
+      - name: Write settings.gradle.kts (pluginManagement + repos)
         shell: bash
         run: |
           set -e
           ROOT="${{ steps.detect.outputs.PROJECT_DIR }}"
-          FILE="$ROOT/settings.gradle.kts"
-          cat > "$FILE" <<'EOF'
-          pluginManagement {
-            repositories {
-              gradlePluginPortal()
-              google()
-              mavenCentral()
-            }
-            plugins {
-              id("com.android.application") version "8.5.2"
-              id("org.jetbrains.kotlin.android") version "1.9.24"
-            }
-          }
-          dependencyResolutionManagement {
-            repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
-            repositories {
-              google()
-              mavenCentral()
-            }
-          }
-          rootProject.name = "TitanApp"
-          include(":app")
-          EOF
-          echo "Wrote $FILE"
+          cat > "$ROOT/settings.gradle.kts" <<'EOF'
+pluginManagement {
+  repositories {
+    gradlePluginPortal()
+    google()
+    mavenCentral()
+  }
+  plugins {
+    id("com.android.application") version "8.5.2"
+    id("org.jetbrains.kotlin.android") version "1.9.24"
+  }
+}
+dependencyResolutionManagement {
+  repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+  repositories {
+    google()
+    mavenCentral()
+  }
+}
+rootProject.name = "TitanApp"
+include(":app")
+EOF
+          echo "Wrote $ROOT/settings.gradle.kts"
 
-      - name: Ensure app build gradle kts is compatible
+      - name: Ensure app/build.gradle.kts exists and is Java 17/Compose friendly
         shell: bash
         run: |
           set -e
           APP_KTS="${{ steps.detect.outputs.PROJECT_DIR }}/app/build.gradle.kts"
-          APP_GROOVY="${{ steps.detect.outputs.PROJECT_DIR }}/app/build.gradle"
           mkdir -p "${{ steps.detect.outputs.PROJECT_DIR }}/app"
+          # Always write a clean, known-good file (simplest & avoids partial-heredoc issues)
+          cat > "$APP_KTS" <<'EOF'
+plugins {
+  id("com.android.application")
+  id("org.jetbrains.kotlin.android")
+}
 
-          if [ -f "$APP_KTS" ]; then
-            echo "Keeping existing app/build.gradle.kts but enforcing Java 17 / Compose / opt-ins"
-          else
-            echo "Creating app/build.gradle.kts"
-            cat > "$APP_KTS" <<'EOF'
-            plugins {
-              id("com.android.application")
-              id("org.jetbrains.kotlin.android")
-            }
+android {
+  namespace = "com.example.titan"
+  compileSdk = 34
 
-            android {
-              namespace = "com.example.titan"
-              compileSdk = 34
+  defaultConfig {
+    applicationId = "com.example.titan"
+    minSdk = 26
+    targetSdk = 34
+    versionCode = 1
+    versionName = "1.0"
+  }
 
-              defaultConfig {
-                applicationId = "com.example.titan"
-                minSdk = 26
-                targetSdk = 34
-                versionCode = 1
-                versionName = "1.0"
-              }
+  buildFeatures { compose = true }
 
-              buildFeatures {
-                compose = true
-              }
+  composeOptions { kotlinCompilerExtensionVersion = "1.5.14" }
 
-              composeOptions {
-                kotlinCompilerExtensionVersion = "1.5.14"
-              }
+  compileOptions {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+  }
 
-              compileOptions {
-                sourceCompatibility = JavaVersion.VERSION_17
-                targetCompatibility = JavaVersion.VERSION_17
-              }
+  kotlinOptions {
+    jvmTarget = "17"
+    freeCompilerArgs += listOf(
+      "-Xskip-prerelease-check",
+      "-opt-in=kotlin.RequiresOptIn"
+    )
+  }
+}
 
-              kotlinOptions {
-                jvmTarget = "17"
-                freeCompilerArgs += listOf(
-                  "-Xskip-prerelease-check",
-                  "-opt-in=kotlin.RequiresOptIn"
-                )
-              }
-            }
+dependencies {
+  implementation(platform("org.jetbrains.kotlin:kotlin-bom"))
+  implementation("androidx.core:core-ktx:1.12.0")
+  implementation("androidx.appcompat:appcompat:1.6.1")
 
-            dependencies {
-              implementation(platform("org.jetbrains.kotlin:kotlin-bom"))
-              implementation("androidx.core:core-ktx:1.12.0")
-              implementation("androidx.appcompat:appcompat:1.6.1")
+  implementation(platform("androidx.compose:compose-bom:2024.06.00"))
+  implementation("androidx.activity:activity-compose:1.9.0")
+  implementation("androidx.compose.ui:ui")
+  implementation("androidx.compose.ui:ui-tooling-preview")
+  implementation("androidx.compose.material3:material3")
 
-              // Compose BOM + typical UI bits (safe even if app doesn’t use all)
-              implementation(platform("androidx.compose:compose-bom:2024.06.00"))
-              implementation("androidx.activity:activity-compose:1.9.0")
-              implementation("androidx.compose.ui:ui")
-              implementation("androidx.compose.ui:ui-tooling-preview")
-              implementation("androidx.compose.material3:material3")
+  debugImplementation("androidx.compose.ui:ui-tooling")
+  debugImplementation("androidx.compose.ui:ui-test-manifest")
+}
+EOF
+          echo "Wrote $APP_KTS"
 
-              debugImplementation("androidx.compose.ui:ui-tooling")
-              debugImplementation("androidx.compose.ui:ui-test-manifest")
-            }
-            EOF
-          fi
-
-          # If a Groovy build.gradle exists, we’ll append the Java17 / opt-ins hints to be safe.
-          if [ -f "$APP_GROOVY" ]; then
-            echo "Patching app/build.gradle (Groovy) with Java 17 and opt-ins"
-            awk '
-              BEGIN{inAndroid=0; added=0}
-              /android *{/ {inAndroid=1}
-              { print }
-              inAndroid && /kotlinOptions *{/ {print "        jvmTarget = \"17\""; print "        freeCompilerArgs += [\"-Xskip-prerelease-check\", \"-opt-in=kotlin.RequiresOptIn\"]"; added=1}
-              inAndroid && /compileOptions *{/ {print "        sourceCompatibility JavaVersion.VERSION_17"; print "        targetCompatibility JavaVersion.VERSION_17"; added=1}
-              /}/ && inAndroid { inAndroid=0 }
-              END{}
-            ' "$APP_GROOVY" > tmp && mv tmp "$APP_GROOVY"
-          fi
-
-      - name: Build Debug APK verbose
+      - name: Build Debug APK (verbose)
         shell: bash
         run: |
           set -e
@@ -194,6 +169,8 @@ jobs:
           find "${{ steps.detect.outputs.PROJECT_DIR }}" -maxdepth 3 \( -name "build.gradle" -o -name "build.gradle.kts" \) -print
           echo "== App directory listing =="
           ls -la "${{ steps.detect.outputs.PROJECT_DIR }}/app" || true
+          echo "== Gradle output tree =="
+          find "${{ steps.detect.outputs.PROJECT_DIR }}/app/build/outputs" -maxdepth 4 -type f | sed 's/^/  /' || true
 
       - name: Upload APK artifact
         if: always()
