--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -3,8 +3,8 @@ name: Build Titan (Debug APK)
 on:
   push:
     paths:
-      - 'TitanApp_Rebuild.zip'
-      - '.github/workflows/android-build.yml'
+      - "TitanApp_Rebuild.zip"
+      - ".github/workflows/android-build.yml"
   workflow_dispatch:
 
 jobs:
@@ -22,7 +22,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: '17'
+          java-version: "17"
           cache: gradle
 
       - name: Set up Android SDK
@@ -36,18 +36,21 @@ jobs:
         shell: bash
         run: |
           set -e
-          D="$(dirname "$(find TitanApp -maxdepth 3 -name build.gradle -o -name build.gradle.kts | head -n1)")"
-          if [ -z "$D" ] || [ "$D" = "." ]; then
-            D="$(find TitanApp -maxdepth 4 -type d -path "*/app" | head -n1 | xargs dirname)"
+          # Prefer TitanApp if present; otherwise search
+          if [ -d TitanApp/app ]; then
+            D="TitanApp"
+          else
+            D="$(dirname "$(find . -maxdepth 3 -name app -type d | head -n1)")"
+            D="${D:-.}"
           fi
-          D="${D:-TitanApp}"
           echo "PROJECT_DIR=$D" >> "$GITHUB_OUTPUT"
           echo "Detected PROJECT_DIR=$D"
 
-      - name: Make gradlew executable if present
+      - name: Make gradlew executable (if present)
         working-directory: ${{ steps.detect.outputs.PROJECT_DIR }}
         shell: bash
-        run: if [ -f ./gradlew ]; then chmod +x ./gradlew; fi
+        run: |
+          if [ -f ./gradlew ]; then chmod +x ./gradlew; fi
 
       - name: Pick Gradle (wrapper or 8.7)
         id: gradle
@@ -65,94 +68,101 @@ jobs:
             echo "GRADLE_CMD=gradle" >> "$GITHUB_OUTPUT"
           fi
 
-      - name: Write settings.gradle.kts (pluginManagement + repos)
+      # ---------- FIXED: correctly indented here-doc body ----------
+      - name: Write settings.gradle(.kts) with repositories + include(":app")
         shell: bash
         run: |
           set -e
           ROOT="${{ steps.detect.outputs.PROJECT_DIR }}"
           cat > "$ROOT/settings.gradle.kts" <<'EOF'
-pluginManagement {
-  repositories {
-    gradlePluginPortal()
-    google()
-    mavenCentral()
-  }
-  plugins {
-    id("com.android.application") version "8.5.2"
-    id("org.jetbrains.kotlin.android") version "1.9.24"
-  }
-}
-dependencyResolutionManagement {
-  repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
-  repositories {
-    google()
-    mavenCentral()
-  }
-}
-rootProject.name = "TitanApp"
-include(":app")
-EOF
+          pluginManagement {
+            repositories {
+              gradlePluginPortal()
+              google()
+              mavenCentral()
+            }
+            plugins {
+              id("com.android.application") version "8.5.2"
+              id("org.jetbrains.kotlin.android") version "1.9.24"
+            }
+          }
+          dependencyResolutionManagement {
+            repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+            repositories {
+              google()
+              mavenCentral()
+            }
+          }
+          rootProject.name = "TitanApp"
+          include(":app")
+          EOF
           echo "Wrote $ROOT/settings.gradle.kts"
 
-      - name: Ensure app/build.gradle.kts exists and is Java 17/Compose friendly
+      - name: Ensure app/build.gradle.kts exists and is compatible
         shell: bash
         run: |
           set -e
           APP_KTS="${{ steps.detect.outputs.PROJECT_DIR }}/app/build.gradle.kts"
-          mkdir -p "${{ steps.detect.outputs.PROJECT_DIR }}/app"
-          # Always write a clean, known-good file (simplest & avoids partial-heredoc issues)
-          cat > "$APP_KTS" <<'EOF'
-plugins {
-  id("com.android.application")
-  id("org.jetbrains.kotlin.android")
-}
+          if [ ! -f "$APP_KTS" ]; then
+            mkdir -p "${{ steps.detect.outputs.PROJECT_DIR }}/app"
+            cat > "$APP_KTS" <<'EOF'
+            plugins {
+              id("com.android.application")
+              id("org.jetbrains.kotlin.android")
+            }
 
-android {
-  namespace = "com.example.titan"
-  compileSdk = 34
+            android {
+              namespace = "com.example.titan"
+              compileSdk = 34
 
-  defaultConfig {
-    applicationId = "com.example.titan"
-    minSdk = 26
-    targetSdk = 34
-    versionCode = 1
-    versionName = "1.0"
-  }
+              defaultConfig {
+                applicationId = "com.example.titan"
+                minSdk = 26
+                targetSdk = 34
+                versionCode = 1
+                versionName = "1.0"
+              }
 
-  buildFeatures { compose = true }
+              buildFeatures { compose = true }
+              composeOptions { kotlinCompilerExtensionVersion = "1.5.14" }
 
-  composeOptions { kotlinCompilerExtensionVersion = "1.5.14" }
+              compileOptions {
+                sourceCompatibility = JavaVersion.VERSION_17
+                targetCompatibility = JavaVersion.VERSION_17
+              }
+            }
 
-  compileOptions {
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
-  }
+            kotlin {
+              jvmToolchain(17)
+            }
 
-  kotlinOptions {
-    jvmTarget = "17"
-    freeCompilerArgs += listOf(
-      "-Xskip-prerelease-check",
-      "-opt-in=kotlin.RequiresOptIn"
-    )
-  }
-}
-
-dependencies {
-  implementation(platform("org.jetbrains.kotlin:kotlin-bom"))
-  implementation("androidx.core:core-ktx:1.12.0")
-  implementation("androidx.appcompat:appcompat:1.6.1")
-
-  implementation(platform("androidx.compose:compose-bom:2024.06.00"))
-  implementation("androidx.activity:activity-compose:1.9.0")
-  implementation("androidx.compose.ui:ui")
-  implementation("androidx.compose.ui:ui-tooling-preview")
-  implementation("androidx.compose.material3:material3")
-
-  debugImplementation("androidx.compose.ui:ui-tooling")
-  debugImplementation("androidx.compose.ui:ui-test-manifest")
-}
-EOF
-          echo "Wrote $APP_KTS"
+            dependencies {
+              implementation(platform("org.jetbrains.kotlin:kotlin-bom"))
+              implementation("androidx.core:core-ktx:1.12.0")
+              implementation("androidx.appcompat:appcompat:1.6.1")
+            }
+            EOF
+            echo "Created minimal app/build.gradle.kts"
+          else
+            echo "Found existing app/build.gradle.kts"
+            # Best-effort patch: ensure Java 17 compile options are present
+            if ! grep -q "compileOptions" "$APP_KTS"; then
+              awk '
+                BEGIN{added=0}
+                /android *\{/ {inA=1}
+                inA && /composeOptions/ && !added {
+                  print
+                  print "  compileOptions {"
+                  print "    sourceCompatibility = JavaVersion.VERSION_17"
+                  print "    targetCompatibility = JavaVersion.VERSION_17"
+                  print "  }"
+                  added=1; next
+                }
+                {print}
+              ' "$APP_KTS" > tmp && mv tmp "$APP_KTS"
+              echo "Patched compileOptions for Java 17"
+            fi
+          fi
 
       - name: Build Debug APK (verbose)
         shell: bash
@@ -161,16 +171,14 @@ EOF
           CMD="${{ steps.gradle.outputs.GRADLE_CMD }}"
           "$CMD" -p "${{ steps.detect.outputs.PROJECT_DIR }}" --no-daemon :app:assembleDebug --stacktrace --info
 
-      - name: Debug print project structure on failure
+      - name: "Debug: print project structure on failure"
         if: failure()
         shell: bash
         run: |
           echo "== Gradle files found =="
-          find "${{ steps.detect.outputs.PROJECT_DIR }}" -maxdepth 3 \( -name "build.gradle" -o -name "build.gradle.kts" \) -print
+          find "${{ steps.detect.outputs.PROJECT_DIR }}" -maxdepth 3 \( -name "build.gradle" -o -name "build.gradle.kts" \)
           echo "== App directory listing =="
           ls -la "${{ steps.detect.outputs.PROJECT_DIR }}/app" || true
-          echo "== Gradle output tree =="
-          find "${{ steps.detect.outputs.PROJECT_DIR }}/app/build/outputs" -maxdepth 4 -type f | sed 's/^/  /' || true
 
       - name: Upload APK artifact
         if: always()
